--- a/src/App.css
+++ b/src/App.css
@@ -95,23 +95,45 @@
     display: block;
 }
 
-.user-box {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 0.15rem;
-    position: absolute;
-    right: 2rem;
+.user-icon {
+	align-items:     center;
+	background:      #64748b;
+	border:          2px solid #fff;
+	border-radius:   100%;
+	color:           #000;
+	display:         flex;
+	font-weight:     600;
+	height:          2.5rem;
+	justify-content: center;
+	text-transform:  uppercase;
+	width:           2.5rem;
 }
 
-.user-label {
-    font-size: 0.8rem;
-    opacity: 0.7;
+.user-box {
+	align-items:    center;
+	background:     #000;
+	border-radius:  5rem;
+	display:        flex;
+	flex-direction: row;
+	font-size:      1.2rem;
+	padding:        .5rem .5rem;
+	position:       absolute;
+	right:          2rem;
+}
+
+.user-box::before {
+	background:    conic-gradient(from 150deg, #f97316, #22c55e, #4f46e5, #f97316);
+	border-radius: inherit;
+	content:       "";
+	inset:         -3px; /* épaisseur de la bordure */
+	position:      absolute;
+	z-index:       -1;
 }
 
 .user-name {
-    font-weight: 600;
-    font-size: 1rem;
+	font-size:   1.5rem;
+	font-weight: 600;
+	margin:      0 1.5rem;
 }
 
 /* Contenu */
