--- a/src/Components/Sudoku/Sudoku.scss
+++ b/src/Components/Sudoku/Sudoku.scss
@@ -29,7 +29,7 @@
 			border          : 1px solid rgba(229, 231, 235, 0.25);
 
 			color           : #f9fafb;
-			font-size       : 18px;
+			font-size       : 3rem;
 			font-weight     : 600;
 			text-align      : center;
 
