--- a/src/Components/Sudoku/Sudoku.scss
+++ b/src/Components/Sudoku/Sudoku.scss
@@ -39,6 +39,14 @@
 			caret-color     : transparent;
 			cursor          : pointer;
 
+			&:hover {
+				background : #00000080;
+				transition : all 0.05s ease-in-out;
+				transform  : scale(1.1);
+				border-radius : 5px;
+				border        : 2px solid #ffffff !important;
+			}
+
 			&:focus {
 				background    : #000000;
 				z-index       : 1;
