--- a/src/Components/Sudoku/Sudoku.scss
+++ b/src/Components/Sudoku/Sudoku.scss
@@ -1,6 +1,30 @@
 .sudoku {
-	width  : 100%;
-	height : 45rem;
+	width           : 100%;
+	display         : flex;
+	flex-direction  : row;
+	justify-content : space-around;
+
+	.options {
+		display        : flex;
+		flex-direction : column;
+		gap            : 1rem;
+		background     : #02061735;
+		border         : 3px solid #e5e7eb;
+		width          : 25rem;
+		border-radius  : 10px;
+		height         : 50rem;
+		margin         : 1rem;
+
+		h2 {
+			text-align    : center;
+			margin        : 0;
+			color         : white;
+			font-size     : 3rem;
+			font-weight   : 600;
+			border-bottom : 1px solid #e5e7eb;
+			padding       : 1rem 0;
+		}
+	}
 
 	.game {
 		--cell-size    : 4.5rem;
@@ -8,19 +32,18 @@
 		display        : flex;
 		flex-direction : column;
 		align-items    : center;
-		padding        : 2rem;
-		margin         : 1rem auto;
-		background     : #02061735;
-		border         : 3px solid #e5e7eb;
-		width          : 41rem;
-		border-radius  : 10px;
-		height         : 45rem;
+
+		.title {
+			font-size : 4rem;
+		}
 
 		.grid {
-
+			background            : #02061735;
+			border                : 3px solid #e5e7eb;
 			display               : grid;
 			grid-template-columns : repeat(9, var(--cell-size));
 			grid-template-rows    : repeat(9, var(--cell-size));
+			border-radius         : 10px;
 
 			.cell {
 				-moz-appearance : textfield; /* retire les flèches Firefox */
@@ -86,34 +109,48 @@
 				}
 			}
 		}
+	}
 
-		.controls {
-			display         : flex;
-			justify-content : flex-end;
-			position        : absolute;
-			right           : 2.2rem;
-			bottom          : 1.5rem;
-			width           : auto;
-			gap             : 0.5rem;
+	.actions {
+		display        : flex;
+		flex-direction : column;
+		gap            : 2rem;
+		background     : #02061735;
+		border         : 3px solid #e5e7eb;
+		width          : 25rem;
+		border-radius  : 10px;
+		height         : 50rem;
+		margin         : 1rem;
 
-			.validate-button {
-				height        : 4rem;
-				background    : #10b981;
-				color         : white;
-				padding       : 0.75rem 3rem;
-				border-radius : 2rem;
-				border        : none;
-				cursor        : pointer;
-				font-size     : 3rem;
-				font-weight   : 600;
-				transition    : all 0.2s ease-in-out;
+		.validate-button {
+			height        : 4rem;
+			width         : 20rem;
+			align-self    : center;
+			background    : #10b981;
+			color         : white;
+			padding       : 0.75rem 2rem;
+			border-radius : 2rem;
+			border        : none;
+			cursor        : pointer;
+			font-size     : 3rem;
+			font-weight   : 600;
+			transition    : all 0.2s ease-in-out;
 
-				&:hover {
-					background-color : #17560b;
-					transform        : scale(1.05);
-					box-shadow       : 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
-				}
+			&:hover {
+				background-color : #17560b;
+				transform        : scale(1.05);
+				box-shadow       : 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
 			}
+		}
+
+		h2 {
+			text-align    : center;
+			margin        : 0;
+			color         : white;
+			font-size     : 3rem;
+			font-weight   : 600;
+			border-bottom : 1px solid #e5e7eb;
+			padding       : 1rem 0;
 		}
 	}
 
