--- a/src/Components/Sudoku/Sudoku.scss
+++ b/src/Components/Sudoku/Sudoku.scss
@@ -5,15 +5,35 @@
 	justify-content : space-around;
 
 	.options {
-		display        : flex;
-		flex-direction : column;
-		gap            : 1rem;
-		background     : #02061735;
-		border         : 3px solid #e5e7eb;
-		width          : 25rem;
-		border-radius  : 10px;
-		height         : 50rem;
-		margin         : 1rem;
+		display         : flex;
+		flex-direction  : column;
+		justify-content : space-between;
+		gap             : 1rem;
+		background      : #02061735;
+		border          : 3px solid #e5e7eb;
+		width           : 25rem;
+		border-radius   : 10px;
+		height          : 50rem;
+		margin          : 1rem;
+
+		.cluesRange {
+			display        : flex;
+			flex-direction : column;
+			border         : 1px solid #e5e7eb;
+			gap            : 1rem;
+			padding        : 1rem;
+			margin         : 0 1rem;
+			font-size      : 1.8rem;
+			border-radius  : 10px;
+			transition     : all 0.2s ease-in-out;
+
+			&:hover {
+				background-color : #02061750;
+				transform        : scale(1.05);
+				box-shadow       : 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
+				border           : 3px solid #e5e7eb;
+			}
+		}
 
 		h2 {
 			text-align    : center;
@@ -21,8 +41,53 @@
 			color         : white;
 			font-size     : 3rem;
 			font-weight   : 600;
-			border-bottom : 1px solid #e5e7eb;
+			border-bottom : 3px solid #e5e7eb;
 			padding       : 1rem 0;
+		}
+
+		.buttons-container {
+			display        : flex;
+			flex-direction : column;
+			gap            : 1rem;
+			bottom         : 1rem;
+			position       : relative;
+
+			.generate-button {
+				background : #10b981;
+				color      : white;
+				border     : none;
+
+				&:hover {
+					background-color : #17560b;
+				}
+			}
+
+			.reset-button {
+				background : transparent;
+				border     : 4px solid #10b981;
+				color      : #e6eef3;
+
+				&:hover {
+					border-color : #17560b;
+				}
+			}
+
+			.reset-button, .generate-button {
+				height        : 4rem;
+				width         : 20rem;
+				align-self    : center;
+				padding       : 0.75rem 2rem;
+				border-radius : 2rem;
+				cursor        : pointer;
+				font-size     : 3rem;
+				font-weight   : 600;
+				transition    : all 0.2s ease-in-out;
+
+				&:hover {
+					transform  : scale(1.05);
+					box-shadow : 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
+				}
+			}
 		}
 	}
 
@@ -149,7 +214,7 @@
 			color         : white;
 			font-size     : 3rem;
 			font-weight   : 600;
-			border-bottom : 1px solid #e5e7eb;
+			border-bottom : 3px solid #e5e7eb;
 			padding       : 1rem 0;
 		}
 	}
