feat > front > sudoku : calcul du nombre d'XP en fonction des paramètres de l'utilisateur

--- a/src/Components/Sudoku/Sudoku.scss
+++ b/src/Components/Sudoku/Sudoku.scss
@@ -56,6 +56,7 @@
 				background : #10b981;
 				color      : white;
 				border     : none;
+				font-size  : 2.3rem !important;
 
 				&:hover {
 					background-color : #17560b;
