--- a/src/Components/Sudoku/Sudoku.scss
+++ b/src/Components/Sudoku/Sudoku.scss
@@ -33,6 +33,25 @@
 				box-shadow       : 0 0.5rem 1rem rgba(0, 0, 0, 0.60);
 				border           : 3px solid #e5e7eb;
 			}
+
+			input {
+				padding       : 0.5rem;
+				width         : 18rem;
+				background    : transparent;
+				transition    : all 0.2s ease-in-out;
+				border        : 1px solid #f9fafb;
+				border-radius : 12px;
+				height        : 2rem;
+				margin        : 0 auto;
+				color         : #f9fafb;
+				font-size     : 1.5rem;
+				text-align    : center;
+				font-weight   : bold;
+
+				&:hover {
+					background : #02061750;
+				}
+			}
 		}
 
 		h2 {
